# RealTime-Embedded-Programming-Team9

./: DHT11  DHT11.cpp  README.md  c++LoadModel  dht11  dht11.cpp  dht11_Realtime  dht11_Realtime.cpp  dht11_gpiod.cpp  fruit_detect  fruitcamera_english  fruitcamera_english.cpp  fruitcamera_test3.cpp  main.cpp  mainexe  switch_monitor  switch_monitor.cpp  test2.cpp  test_opencamera  training.yaml  valid.cache
Demo_test/: CMakeLists.txt  fruitcamera_english.cpp  fruitcamera_english.h  main.cpp  secondpage.cpp  secondpage.h
Demo_test10/: CMakeLists.txt  DetectionWorker.cpp  DetectionWorker.h  GPIOSwitch.cpp  GPIOSwitch.h  SensorWorker.cpp  SensorWorker.h  fruitvegdetect.cpp  fruitvegdetect.h  main.cpp  mainwindow.cpp  mainwindow.h  secondpage.cpp  secondpage.h
Demo_test11/: CMakeLists.txt
Demo_test2/: GPIOSwitch.h  fruitvegdetect.cpp  fruitvegdetect.h  mainwindow.cpp  mainwindow.h  secondpage.cpp
Demo_test3/: DetectionWorker.cpp  DetectionWorker.h  main.cpp  mainwindow.cpp  mainwindow.h
Demo_test4/: SensorWorker.cpp  SensorWorker.h
Demo_test6/: SensorWorker.cpp  SensorWorker.h  mainwindow.cpp
Demo_test7/: CMakeLists.txt  DetectionWorker.cpp  DetectionWorker.h  FrameGrabber.h  GPIOSwitch.cpp  fruitvegdetect.cpp  fruitvegdetect.h  mainwindow.cpp  mainwindow.h  secondpage.h
Demo_test8(保质期更改)/: CMakeLists.txt  mainwindow.cpp  secondpage.cpp
Demo_test9_final/: CMakeLists.txt  DetectionWorker.cpp  DetectionWorker.h  SensorWorker.cpp  mainwindow.cpp  mainwindow.h  secondpage.cpp
FridgeManager_v1.0/: GPIOSwitch.cpp  GPIOSwitch.h  fruitvegdetect.cpp  main.cpp  mainwindow.cpp
FridgeManager_v1.1/: DetectionWorker.cpp  DetectionWorker.h  GPIOSwitch.cpp  SensorWorker.h  fruitvegdetect.h  mainwindow.cpp  secondpage.h
camera_new/: Makefile  camera  mainwindow.cpp  mainwindow.h  ui_mainwindow.h
camera_test2/camera/: Makefile  camera.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
camera_test2/camera_test2/camera/: mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  ui_mainwindow.h
qt_yolo/: CMakeLists.txt  fruitvegdetect.cpp  fruitvegdetect.h  main.cpp  mainwindow.cpp  mainwindow.h  secondpage.cpp  secondpage.h
yolo/: README.roboflow.txt  train.cache  train_model.py  training.yaml
yolo/datasets/: train.cache
yolo/datasets/test/: _darknet.labels
yolo/runs/detect/train_model_fruit7/: args.yaml  results.csv
yolo/train_model_fruit7/: args.yaml  results.csv
